<resources>
    <string-array name="tt">
        <item>This week</item>
        <item>Last 14 days</item>
        <item>50 days</item>
    </string-array>
    <string name="app_name">EyeBB</string>
    <string name="text_policy">By Continuing, you agree to our <u>Terms</u> and <u>Privacy Policy</u>.</string>
    <string name="text_user_name">User Name</string>
    <string name="text_nick_name">Nick Name</string>
    <string name="text_email">Email (optional)</string>
    <string name="text_phone_number">Phone Number (User Name)</string>
    <string name="text_password">Password</string>
    <string name="text_login_account">User Name</string>
    <string name="text_select_kid_kindergarten">Select your kid\&apos;s kindergarten</string>
    <string name="text_fill_kid_name">Fill in your kid\&apos;s name</string>
    <string name="text_kid_name">Kid\&apos;s name</string>
    <string name="text_kid_birthday">Kid\&apos;s birthday</string>
    <string name="text_select_kid_birthday">Select your kid\&apos;s birthday</string>
    <string name="text_forgot_password">Forgot your password ?</string>
    <string name="text_indoor_locator">Indoor Locator</string>
    <string name="text_radar_tracking">Radar Tracking</string>
    <string name="text_report">Report</string>
    <string name="text_child_information_matching">Child Information</string>
    <string name="text_kids_list">Kids-List</string>
    <string name="text_change_kids">Change Kids</string>
    <string name="text_beep_all">Beep all</string>
    <string name="text_beep_all_device">Beep all devices?</string>
    <string name="text_change">Change</string>
    <string name="text_today">Today</string>
    <string name="text_customized">Customized:\&#160;</string>
    <string name="text_days">days</string>
    <string name="text_beep">Beep</string>
    <string name="text_school_bus_tracking">School Bus Tracking</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_settings">Settings</string>
    <string name="text_settings_app_function">Eyebb app function</string>
    <string name="text_enableSound">Enable Sound</string>
    <string name="text_refreshTime">Auto-Refresh Time (Second):</string>
    <string name="text_refreshDefaultTime">5</string>
    <string name="text_enableVibration">Enable Vibration</string>
    <string name="text_language">Language</string>
    <string name="text_english">English</string>
    <string name="text_chinese">繁體中文</string>
    <string name="text_simplified_chinese">简体中文</string>
    <string name="text_others">Others</string>
    <string name="text_about">About</string>
    <string name="text_TermsOfService">Terms of Service</string>
    <string name="text_update_password">Update Password</string>
    <string name="text_update_nickname">Update Nickname</string>
    <string name="text_privacyPolicy">Privacy Policy</string>
    <string name="text_forgetPassword">Forget Password</string>
    <string name="text_forgetPassword_details">Please enter your user name (phone number) and child information to received details for your new password. (this is testing function. the new password is 00000000)</string>
    <string name="text_forgetPassword_email">Enter your email address</string>
    <string name="text_forgetPassword_phone">Enter your user name (phone number)</string>
    <string name="text_forgetPassword_child_name">Enter your child name</string>
    <string name="text_forgetPassword_child_birthday">Choose your child birthday</string>
    <string name="text_enter_refresh_time">Enter the refresh time</string>
    <string name="text_activityDetails">Activity Details</string>
    <string name="text_sec">Sec.</string>
    <string name="text_error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="text_notificationDetails">Notification Details</string>
    <string name="text_about_details">EyeBB is a smart kid bahavior analysis and monitoring application. It works with our developed Bluetooth Low Energy-based smart device "Macaron"，EyeBB can help you monitor the safety of kids at home, in the school bus, and in the kindergarten. It also provides accurate behavior analysis for your kids.</string>
    <string name="text_version">Version</string>
    <string name="text_http">Welcome to www.eyebb.com</string>
    <string name="text_invalidKindergarten">Invalid kindergarten</string>
    <string name="text_error_username">The User Name is not in the correct format!</string>
    <string name="text_error_email">The Email is not in the correct format!</string>
    <string name="text_error_nickname">The Nickname is not in the correct format!</string>
    <string name="text_error_password">The Password is not in the correct format! \n(eg.A-Z a-z 0-9) Length:6-20</string>
    <string name="text_loading">Loading&#8230;</string>
    <string name="text_no_record">No record</string>
    <string name="text_view_all_room">View All Rooms</string>
    <string name="text_something_has_gone_wrong">Oops, Something has gone wrong!</string>
    <string name="text_auto_refresh">Auto-Refresh</string>
    <string name="text_binding_device">Binding Eyebb Device?</string>
    <string name="text_anti_lost_mode">Anti lost</string>
    <string name="text_authorization">Authorization</string>
    <string name="text_device">Eyebb device function</string>
    <string name="text_more">More</string>
    <string name="text_feed_back">Feedback</string>
    <string name="text_feed_back_content">Love it? Hate it? Would you like to suggest a new feature or report a bug? We would love to hear from you:</string>
    <string name="text_your_comments">Your comments</string>
    <string name="text_feedback_bug">bug</string>
    <string name="text_feedback_idea">idea</string>
    <string name="text_feedback_question">question</string>
    <string name="text_no_content">No content...</string>
    <string name="text_fill_in_something">Please, fill in something!!</string>
    <string name="text_contact_information">Contact information</string>
    <string name="text_user_information">User information</string>
    <string name="text_fill_email_or_phone">Fill in the email or phone information.</string>
    <string name="text_username_is_used">Sorry, the username is already used</string>
    <string name="text_network_error">error! Please check your network.</string>
    <string name="text_register_successfully">Successfully register!</string>
    <string name="text_child_not_exist">This child does not exist</string>
    <string name="text_already_relationship">Error! This child has already binded.</string>
    <string name="text_device_already_binded">Error! This EYEBB has already binded. Please change others.</string>
    <string name="text_feed_back_successful">Successful! Thank you.</string>
    <string name="text_search_guest_null">Sorry,this guest is not exist.</string>
    <string name="text_unbind_device">Do you want to unbind the device?</string>
    <string name="text_unbind_success">Eyebb unbind successfully!</string>
    <string name="text_unbind_fail">Oops! Eyebb unbind Unsuccessfully!</string>
    <string name="text_no_data">No data, no bind child</string>
    <string name="text_no_guest">No Guest</string>
    <string name="text_select_child">Sorry,Please select the children.</string>
    <string name="text_grant_success">Grant Successfully!</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_nickname">New Nickname</string>
    <string name="text_new_password">New Password</string>
    <string name="text_repeat_new_password">Repeat New Password</string>
    <string name="text_two_password_different">Sorry! The two new passwords do not match.</string>
    <string name="text_update_password_successful">Updaate password successfully! Thank you.</string>
    <string name="text_update_nickname_successful">Updaate nickname successfully! Thank you.</string>
    <string name="text_tips">Tips.</string>
    <string name="text_old_password_incorrect">The original password is not correct.</string>
    <string name="text_user_do_not_exist">Sorry. This user may not exist.</string>
    <string name="text_authorized_to_others">Authorized to</string>
    <string name="text_authorization_from_others">Authorization from</string>
    <string name="text_avatar">Avatar</string>
    <string name="text_kindergarten">Kindergarten</string>
    <string name="text_battery_life">eyeBB Battery Usage:</string>
    <string name="text_no_device_nearby">eyebb is not connected</string>
    <string name="text_wrong_login_for_binding">Wrong login, only parents account can register binding.</string>
    <string name="text_master_of_the_child_exist_already">Master of the child already exists.</string>
    <string name="text_scanning">Scanning Macaron</string>
    <string name="text_connecting">Connecting Macaron</string>
    <string name="text_scan_no_device">Cannot scan Macaron</string>
    <string name="text_update_device_data">Update Macaron data</string>
    <string name="text_connect_device_failed">Cannot connect Macaron</string>
    <string name="text_update_server_data">Update server data</string>
    <string name="text_update_server_data_fail">Update server data fail</string>
    <string name="text_bind_success">Eyebb binding successfully</string>
    <string name="text_setting_user_account">User account</string>
    <string name="text_setting_update_nickname">Update nickname</string>
    <string name="text_auth_to_user">Authorize to user: </string>
    <string name="text_account_user_do_not_have_this_child">Sorry! Account user does not have this child.</string>
    <string name="text_bind_child">Binding children</string>
    <string name="text_unbind_child">unBinding children</string>
    <string name="text_granted_child">Children has been granted</string>
    <string name="text_rssi_strong">Strong Signal</string>
    <string name="text_rssi_good">Good Signal</string>
    <string name="text_rssi_weak">Weak Signal</string>
    <string name="text_fill_in_password">Please, enter your password!</string>
    <string name="text_fill_in_nickname">Please, enter your nickname!</string>
    <string name="text_fill_in_new_password">Please, enter your new password!</string>
    <string name="text_fill_in_repeat_new_password">Please, repeat to enter your new password!</string>
    <string name="text_choose_your_feedback_type">Please, choose your feedback type.</string>
    <string name="text_check_battery_life">Click here</string>
    <string name="text_ble_not_supported">Sorry, Your phone is not supported.</string>
    <string name="text_sort_by">Sort by</string>
    <string name="text_name">Name</string>
    <string name="text_location">Location</string>
    <string name="text_search_kid">Search kids&#8230;</string>
    <string name="text_can_not_open_options">Please, turn off the radar function.</string>
    <string name="text_click_to_share">(Click here to share </string>
    <string name="text_update_eyebb_device_firmware">Update the eyebb device firmware</string>
    <string name="text_get_the_eyebb_device_qr_code">Apply for QR code</string>
    <string name="text_get_the_lastest_eyebb_device_qr_code">Apply for the latest QR code</string>
    <string name="text_Apply_qr_code_fail">Fail to get the QR code</string>
    <string name="text_network_unavailable">Network unavailable (Click to connect)</string>
    <string name="text_network_connecting">Connecting&#8230;</string>
    <string name="text_search_guset_activity_share_msg">Invite him/her?。Link：play.google.com/xxxxxxxx</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_search_child">Search child</string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_missed">Missed</string>
    <string name="btn_options">Setting</string>
</resources>