<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_white"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/login"
        style="@style/RedText_18"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:background="@drawable/btn_bg_red_frame"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/sign_up"
        style="@style/WhiteText_18"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_above="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_bg_red"
        android:text="@string/btn_sign_up" />

    <TextView
        style="@style/DarkGreyText_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:lines="2"
        android:text="@string/text_policy" />

</RelativeLayout>