<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/bg_white"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <TextView
            style="@style/BlackText_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/btn_options" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_auto_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <TextView
            style="@style/DarkGreyText_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auto_refresh" />

        <TextView
            android:id="@+id/tv_auto_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_selected_off" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/item_view_all_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <TextView
            style="@style/DarkGreyText_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_all_room" />

        <TextView
            android:id="@+id/tv_view_all_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_selected_off" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <TextView
            style="@style/RedText_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/btn_confirm" />
    </RelativeLayout>

</LinearLayout>