<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/name"
                style="@style/RedText_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_forgetPassword" />

            <TextView
                android:id="@+id/details"
                style="@style/DarkGreyText_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_forgetPassword_details" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/enter_account"
                    style="@style/DarkGreyText_15"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/dialog_forget_password"
                    android:hint="@string/text_forgetPassword_phone"
                    android:imeOptions="actionNext"
                    android:longClickable="false"
                    android:paddingLeft="10dip"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/enter_child_name"
                    style="@style/DarkGreyText_15"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/dialog_forget_password"
                    android:hint="@string/text_forgetPassword_child_name"
                    android:imeOptions="actionDone"
                    android:longClickable="false"
                    android:paddingLeft="10dip"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/enter_child_birthday"
                    style="@style/DarkGreyText_15"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/dialog_forget_password"
                    android:gravity="center_vertical"
                    android:hint="@string/text_forgetPassword_child_birthday"
                    android:paddingLeft="10dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:alpha="0.1"
        android:background="@color/black"
        android:orientation="horizontal" >
    </LinearLayout>

    <!--
         <TextView
        android:id="@+id/back_confirm"
        style="@style/DarkGreyText_18"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/btn_confirm" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.9"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_cancel"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_cross" />

            <TextView
                style="@style/DarkGreyText_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/btn_confirm"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_tick" />

            <TextView
                style="@style/DarkGreyText_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_confirm" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>